<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about_title">About</string>
    <string name="app_name">Extra Settings</string>
    <string name="battery_light_color_title">Battery light Color</string>
    <string name="battery_light_title">Battery light</string>
    <string name="battery_low_pulse_title">Pulse if battery low</string>
    <string name="boeffla_settings_title">Boeffla Kernel Settings</string>
    <string name="button_hotboot">HotBoot</string>
    <string name="button_no">No</string>
    <string name="button_wake_title">Wake up device</string>
    <string name="button_yes">Yes</string>
    <string name="cabc_summary_head">Enable content adaptive backlight control</string>
    <string name="camera_sound_summary_off">Off</string>
    <string name="camera_sound_summary_on">On</string>
    <string name="camera_sound_title">Camera Sound</string>
    <string name="camera_sound_warning_summary">"Shutter sound is compulsory in some regions.
Please abide strictly by the laws, rules and regulations of your area."</string>
    <string name="camera_switch_cm_summary">CM Camera</string>
    <string name="camera_switch_google_summary">Google Camera</string>
    <string name="camera_switch_meizu_summary">Meizu Camera</string>
    <string name="camera_switch_title">Camera Switch</string>
    <string name="charge">Fast Charging</string>
    <string name="charge_warning_dialog_message">Too high charge rates, ignoring unstable power and safety margins can damage your charger or your USB host device. Use with care!</string>
    <string name="defaults_button">Reset to default</string>
    <string name="dialog_ok">Done!Are you sure want to reboot the phone?</string>
    <string name="dialog_reboot">Please restart your mobile phone manually in some time later</string>
    <string name="dialog_root_checking">Checking ROOT</string>
    <string name="dialog_wait">Please Wait...</string>
    <string name="donate_link">https://qr.alipay.com/9972778039134201</string>
    <string name="donate_summary">If you like my work in making this ROM, you are welcome to treat me some coke:)</string>
    <string name="donate_title">Treat Me Coke</string>
    <string name="error_root">NO ROOT!</string>
    <string name="find_meizu_camera">The system is being used in the Meizu camera, please turn off the camera sound on the System Settings</string>
    <string name="gestures">Gesture</string>
    <string name="glove_mode_summary_head">Set High Touch Sensitivity</string>
    <string name="glove_mode_title_head">GLove Mode</string>
    <string name="hardware_keys_action_app_switch">Recent apps switcher</string>
    <string name="hardware_keys_action_in_app_search">In-app search</string>
    <string name="hardware_keys_action_last_app">Last app</string>
    <string name="hardware_keys_action_launch_camera">Launch camera</string>
    <string name="hardware_keys_action_menu">Open/close menu</string>
    <string name="hardware_keys_action_nothing">No action</string>
    <string name="hardware_keys_action_search">Search assistant</string>
    <string name="hardware_keys_action_sleep">Turn screen off</string>
    <string name="hardware_keys_action_voice_search">Voice search</string>
    <string name="hardware_keys_appswitch_key_title">Recents button</string>
    <string name="hardware_keys_double_tap_title">Double tap action</string>
    <string name="hardware_keys_home_key_title">Home button</string>
    <string name="hardware_keys_long_press_title">Long press action</string>
    <string name="hardware_keys_menu_key_title">Menu button</string>
    <string name="hardware_keys_short_press_title">Short press action</string>
    <string name="hardware_keys_volume_keys_title">Volume buttons</string>
    <string name="kcal_invert_title_head">Color Invert</string>
    <string name="kcal_sat_summary_0">Current: Normal Mode</string>
    <string name="kcal_sat_summary_1">Current: Grey Scale Mode</string>
    <string name="kcal_sat_summary_2">Current: Gorgeous Mode</string>
    <string name="kcal_sat_title_head">Screen Display Mode</string>
    <string name="kcal_summary_0">Current: Normal</string>
    <string name="kcal_summary_1">Current: Level 1</string>
    <string name="kcal_summary_2">Current: Level 2</string>
    <string name="kcal_summary_3">Current: Level 3</string>
    <string name="kcal_summary_4">Current: Level 4</string>
    <string name="kcal_title_head">Eyes Protector</string>
    <string name="key">Button</string>
    <string name="keylight_summary_0">Current: Disable</string>
    <string name="keylight_summary_1">Current: Touch LED when touch screen</string>
    <string name="keylight_summary_2">Current: Touch LED when touch key</string>
    <string name="keylight_timeout_summary_0">1 Second</string>
    <string name="keylight_timeout_summary_1">5 Second</string>
    <string name="keylight_timeout_summary_2">10 Second</string>
    <string name="keylight_timeout_summary_3">20 Second</string>
    <string name="keylight_timeout_summary_4">Always on</string>
    <string name="keylight_timeout_title_head">Button Backlight Duration</string>
    <string name="keylight_title_head">Button Backlight Mode</string>
    <string name="led_fade">Notification LED Mode</string>
    <string name="led_fade_off_summary_head">Current: Blinking</string>
    <string name="led_fade_on_summary_head">Current: Fading</string>
    <string name="led_intensity">LED Brightness</string>
    <string name="led_intensity_summary_0">Current: 40</string>
    <string name="led_intensity_summary_1">Current: 30</string>
    <string name="led_intensity_summary_2">Current: 20</string>
    <string name="led_intensity_summary_3">Current: 10</string>
    <string name="led_intensity_summary_4">Current: 5</string>
    <string name="led_intensity_summary_5">Current: 1</string>
    <string name="led_light_color_summary_blue">Blue</string>
    <string name="led_light_color_summary_cyan">Cyan</string>
    <string name="led_light_color_summary_green">Green</string>
    <string name="led_light_color_summary_orange">Orange</string>
    <string name="led_light_color_summary_pink">Pink</string>
    <string name="led_light_color_summary_purple">Purple</string>
    <string name="led_light_color_summary_red">Red</string>
    <string name="led_light_color_summary_white">White</string>
    <string name="led_light_color_summary_yellow">Yellow</string>
    <string name="lights">Lights</string>
    <string name="mdnie_mode_summary_head">Set the mDNIe Mode</string>
    <string name="mdnie_mode_title_head">Mode</string>
    <string name="mdnie_scenario_summary_head">Set the mDNIe Scenario</string>
    <string name="mdnie_scenario_title_head">Scenario</string>
    <string name="mipop">Vitrual Key</string>
    <string name="notification_light_color_title">Notification light Color</string>
    <string name="notification_light_screen_on">Lights with screen on</string>
    <string name="notification_light_title">Notification light</string>
    <string name="others">Others</string>
    <string name="performance_warning_dialog_message">Performance may cause too high temperature,it may damage your device. Use with care!</string>
    <string name="qq_summary">Press to join GalaxyS5 QQ Group</string>
    <string name="qq_title">QQ Group Number:362618214</string>
    <string name="running_mode">Running Mode</string>
    <string name="running_mode_summary_battery">Current: Battery Save</string>
    <string name="running_mode_summary_performance">Current: Performance</string>
    <string name="running_mode_summary_standard">Current: Standard</string>
    <string name="screen">Screen</string>
    <string name="sounds">Sounds</string>
    <string name="success_root">Rooted！</string>
    <string name="touchboost_freq">Input Boost Frequency</string>
    <string name="touchboost_freq_summary_1190400">Current: 1190Mhz</string>
    <string name="touchboost_freq_summary_1497600">Default: 1497Mhz</string>
    <string name="touchboost_freq_summary_1728000">Current: 1728Mhz</string>
    <string name="touchboost_freq_summary_2265600">Current: 2265Mhz</string>
    <string name="touchboost_freq_summary_652800">Current: 652Mhz</string>
    <string name="touchboost_freq_summary_960000">Current: 960Mhz</string>
    <string name="tweak">Tweaks</string>
    <string name="updater_check">Check Updates</string>
    <string name="updater_check_summary">Check OTA Updates</string>
    <string name="updater_choose_abort">Please Choose ZIP file!</string>
    <string name="updater_flash">Flash Downloaded OTA</string>
    <string name="updater_flash_summary">Choose Flash OTA File</string>
    <string name="updater_notice_message">Default Folder is Download!</string>
    <string name="updater_notice_title">NOTICE</string>
    <string name="updater_ok">Okay,Continue!</string>
    <string name="vibrator_tuning_summary_head">Adjust the strength of the vibration feedback</string>
    <string name="vibrator_tuning_title">Vibration strength</string>
    <string name="vibrator_warning">Values higher than %1$d are not recommended</string>
    <string name="wakeup_mode">Screen Wakeup</string>
    <string name="wakeup_mode_summary_0">Current: Disable</string>
    <string name="wakeup_mode_summary_1">Current: Swipe</string>
    <string name="wakeup_mode_summary_2">Current: Swipe (When Charging)</string>
    <string name="wakeup_mode_summary_3">Current: Double Tap</string>
    <string name="wakeup_mode_summary_4">Current: Double Tap (When Charging)</string>
    <string name="wakeup_mode_summary_5">Current: Both</string>
    <string name="wakeup_mode_summary_6">Current: Both (When Charging)</string>
    <string name="warning_title">Warning</string>
    <string name="cabc_title_head">CABC</string>
    <string name="intensity_default_value">50</string>
    <string name="intensity_max_value">100</string>
    <string name="intensity_min_value">0</string>
    <string name="intensity_warning_threshold">75</string>
    <string name="qq_link">http://dwz.cn/s5_luo2888</string>
    <string name="vibrator_sysfs_file">/sys/class/timed_output/vibrator/pwm_value</string>
</resources>
