<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/gestures" android:key="gesture">
        <ListPreference android:title="@string/wakeup_mode" android:key="wakeup_mode" android:defaultValue="0" android:entryValues="@array/wakeup_mode_entries_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/tweak" android:key="tweak">
        <CheckBoxPreference android:title="@string/charge" android:key="charge" android:defaultValue="false" />
        <ListPreference android:title="@string/running_mode" android:key="running_mode" android:defaultValue="1" android:entryValues="@array/running_mode_entries_values" />
        <ListPreference android:title="@string/touchboost_freq" android:key="touchboost_freq" android:defaultValue="0" android:entryValues="@array/touchboot_freq_entries_values" />
        <PreferenceScreen android:title="@string/boeffla_settings_title" android:key="boeffla_settings_key">
            <intent android:targetPackage="de.andip71.boeffla_config_v2" android:action="android.intent.action.MAIN" android:targetClass="de.andip71.boeffla_config_v2.MainActivity" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/lights" android:key="lights">
        <CheckBoxPreference android:title="@string/battery_light_title" android:key="battery_light_enabled" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/battery_low_pulse_title" android:key="battery_light_pulse" android:dependency="battery_light_enabled" android:defaultValue="true" />
        <ListPreference android:title="@string/battery_light_color_title" android:key="battery_light_medium_color" android:dependency="battery_light_enabled" android:defaultValue="6" android:entryValues="@array/battery_light_medium_color_entries_values" />
        <CheckBoxPreference android:title="@string/notification_light_title" android:key="notification_light_pulse" android:defaultValue="true" android:disableDependentsState="false" />
        <CheckBoxPreference android:title="@string/notification_light_screen_on" android:key="notification_light_screen_on_enable" android:dependency="notification_light_pulse" android:defaultValue="false" />
        <ListPreference android:title="@string/notification_light_color_title" android:key="notification_light_pulse_default_color" android:dependency="notification_light_pulse" android:defaultValue="4" android:entryValues="@array/notification_light_pulse_default_color_entries_values" />
        <ListPreference android:title="@string/led_fade" android:key="led_fade" android:defaultValue="1" android:entryValues="@array/led_fade_entries_values" />
        <ListPreference android:title="@string/led_intensity" android:key="led_intensity" android:defaultValue="0" android:entryValues="@array/led_intensity_entries_values" />
        <ListPreference android:title="@string/keylight_title_head" android:key="keylight" android:defaultValue="1" android:entryValues="@array/keylight_entries_values" />
        <ListPreference android:title="@string/keylight_timeout_title_head" android:key="keylight_timeout" android:defaultValue="1" android:entryValues="@array/keylight_timeout_entries_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/key">
        <com.luo2888.flymesettings.VibratorTuningPreference android:title="@string/vibrator_tuning_title" android:key="vibrator_tuning" android:dialogTitle="@string/vibrator_tuning_title" />
        <Preference android:title="@string/mipop">
            <intent android:targetPackage="com.android.mipop" android:action="android.intent.action.MAIN" android:targetClass="com.android.mipop.MIPopActivity" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/hardware_keys_volume_keys_title">
        <CheckBoxPreference android:title="@string/button_wake_title" android:key="volume_wake_screen" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/hardware_keys_home_key_title">
        <ListPreference android:title="@string/hardware_keys_long_press_title" android:key="key_home_long_press_action" android:defaultValue="3" android:entryValues="@array/key_home_long_press_action_entries_values" />
        <ListPreference android:title="@string/hardware_keys_double_tap_title" android:key="key_home_double_tap_action" android:defaultValue="0" android:entryValues="@array/key_home_double_tap_action_entries_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/hardware_keys_menu_key_title">
        <ListPreference android:title="@string/hardware_keys_short_press_title" android:key="key_menu_action" android:defaultValue="1" android:entryValues="@array/key_menu_action_entries_values" />
        <ListPreference android:title="@string/hardware_keys_long_press_title" android:key="key_menu_long_press_action" android:defaultValue="3" android:entryValues="@array/key_menu_long_press_action_entries_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/hardware_keys_appswitch_key_title">
        <ListPreference android:title="@string/hardware_keys_short_press_title" android:key="key_app_switch_action" android:defaultValue="2" android:entryValues="@array/key_app_switch_action_entries_values" />
        <ListPreference android:title="@string/hardware_keys_long_press_title" android:key="key_app_switch_long_press_action" android:defaultValue="0" android:entryValues="@array/key_app_switch_long_press_action_entries_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/screen" android:key="screen">
        <ListPreference android:title="@string/kcal_title_head" android:key="kcal" android:defaultValue="0" android:entryValues="@array/kcal_entries_values" />
        <ListPreference android:title="@string/kcal_sat_title_head" android:key="kcal_sat" android:summary="@string/kcal_sat_summary_head" android:defaultValue="0" android:entryValues="@array/kcal_sat_entries_values" />
        <CheckBoxPreference android:title="@string/glove_mode_title_head" android:key="glove_mode" android:summary="@string/glove_mode_summary_head" android:defaultValue="false" />
        <com.luo2888.flymesettings.CABC android:title="@string/cabc_title_head" android:key="cabc" android:summary="@string/cabc_summary_head" android:defaultValue="true" />
        <com.luo2888.flymesettings.mDNIeScenario android:entries="@array/mdnie_scenario_entries" android:title="@string/mdnie_scenario_title_head" android:key="mdnie_scenario" android:summary="@string/mdnie_scenario_summary_head" android:defaultValue="0" android:entryValues="@array/mdnie_scenario_entries_values" />
        <com.luo2888.flymesettings.mDNIeMode android:entries="@array/mdnie_mode_entries" android:title="@string/mdnie_mode_title_head" android:key="mdnie_mode" android:summary="@string/mdnie_mode_summary_head" android:defaultValue="0" android:entryValues="@array/mdnie_mode_entries_values" />
        <CheckBoxPreference android:title="@string/kcal_invert_title_head" android:key="kcal_invert" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/others" android:key="others">
        <PreferenceScreen android:title="@string/sounds">
            <intent android:targetPackage="com.luo2888.flymesettings" android:action="android.intent.action.main" android:targetClass="com.luo2888.flymesettings.Sounds" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/updater_check" android:summary="@string/updater_check_summary">
            <intent android:targetPackage="com.ota.updates" android:action="android.intent.action.main" android:targetClass="com.ota.updates.activities.MainActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/updater_flash" android:key="flashota" android:summary="@string/updater_flash_summary" />
        <ListPreference android:title="@string/camera_switch_title" android:key="camera_switch_key" android:defaultValue="2" />
        <Preference android:title="@string/donate_title" android:summary="@string/donate_summary">
            <intent android:action="android.intent.action.VIEW" android:data="@string/donate_link" />
        </Preference>
        <Preference android:title="@string/about_title" android:key="about_key" android:summary="© 2016 Meizu Tools | Powered by  GaHoKwan">
            <intent android:action="android.intent.action.VIEW" android:data="http://weibo.com/kwangaho" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>